--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -15,6 +15,7 @@
     "com.unity.xr.management": "3.2.16",
     "com.unity.xr.oculus": "1.5.1",
     "com.unity.xr.windowsmr": "2.4.1",
+    "xyz.candycoded.env": "https://github.com/CandyCoded/env.git#v1.1.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
